tests/expr/left_shift_negative_value/stderr.golden
error: negative value of left shift -1
bus.fbd +2:25
   |
 2 | 	C config; width = 1 << -1
   | 	                       ^^
